AC_INIT(configure.in)

AM_INIT_AUTOMAKE(mpgrafic, 0.1)
AM_CONFIG_HEADER(config.h)

AC_LANG_FORTRAN77
# MPI stuff
AC_PROG_FC
AC_ARG_VAR(MPIFC,[MPI Fortran compiler command])
AC_CHECK_PROGS(MPIFC, mpif90 mpxlf95_r mpxlf90_r mpxlf95 mpxlf90 mpf90 cmpif90c, $FC)
FC="$MPIFC"
F77="$FC"
AC_SUBST(MPIFC)

AC_PROG_CC
AC_FC_LIBRARY_LDFLAGS


# Precision
AC_ARG_VAR(PRECISION,[Single or double precision calculations])
AC_ARG_ENABLE([single],[AS_HELP_STRING([--enable-single],
	[use single precision (default is double)])],
	[use_single=yes],
	[use_single=no])
AC_ARG_VAR(FFTWPREC,[fftw precision prefix])

if test x$use_single = xyes; then
	AC_CHECK_LIB(sfftw,fftw3d_f77_create_plan,[],[
	echo "Error! You need to have (single precision) fftw library." 
	exit -1 
	])
	FFTWPREC=s
	PRECISION=SING
else
	AC_CHECK_LIB(dfftw,fftw3d_f77_create_plan,[],[
	echo "Error! You need to have (double precision) fftw library." 
	exit -1 
	])
	FFTWPREC=d
	PRECISION=DOUB
fi
AC_SUBST(FFTWPREC)
AC_SUBST(PRECISION)

AC_OUTPUT(Makefile src/Makefile)
